# coroSims

./: .gitignore  pyproject.toml  setup.cfg  validation.py
coroSims/: coronagraph.py  observations.py  observing_scenario.py
