[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "coroSims"
version = "0.1.0"
description = "A python library to simulate coronagraphic observations of exoplanets."
authors = [
    {name = "Jens Kammerer", email = "jkammerer@stsci.edu"},
    {name = "Corey Spohn", email = "corey.a.spohn@nasa.gov"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Home = "https://github.com/CoreySpohn/coroSims"
Source = "https://github.com/CoreySpohn/coroSims"
Tracker = "https://github.com/CoreySpohn/coroSims/issues"

